--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
+    "victory": "^37.3.6",
     "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
